# snbb_questionnaire

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject copy.toml  pyproject.toml  requirements_dev.txt  ruff.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: github-actions.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
src/cortexquest/: cli.py
src/cortexquest/core/: google_auth.py  sheet_loader.py
src/cortexquest/core/translators/: headers.py
src/snbb_questionnaire/: __init__.py  cli.py  snbb_questionnaire.py
src/snbb_questionnaire/core/: sheet_loader.py
src/snbb_questionnaire/core/translators/: __init__.py  headers.py  psqi.py
src/snbb_questionnaire/core/translators/bfi/: bfi.py
src/snbb_questionnaire/core/translators/gad7/: gad7.py
src/snbb_questionnaire/core/translators/psqi/: psqi.py
tests/: __init__.py  test_cortexquest.py  test_snbb_questionnaire.py
