[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexquest"
version = "0.1.0"
description = "CortexQuest is a Python package designed to facilitate the reading, parsing, and analysis of questionnaires hosted on Google Sheets, specifically tailored for brain bank data. This tool aims to streamline the process of handling survey data related to neuroscience research, providing researchers with an efficient and user-friendly way to manage and analyze their data."
readme = "README.rst"
authors = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"},
  {name = "Tzlil Tabib", email = "tzliltabib@gmail.com"}
]
maintainers = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"},
  {name = "Tzlil Tabib", email = "tzliltabib@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "tox",
  "pandas",
  "gspread",
  "oauth2client",
  "google-auth",
  "google-auth-oauthlib"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/changelog.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

